--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 div.consoleBottom {
     background-color: rgba(62, 70, 81, 0.8);
     color: #F0F0F0;
-    font-family: 'Ubuntu Mono', monospace;
+    font-family: 'Ubuntu Mono', 'consolas', monospace;
     font-size: 12pt;
     padding: 0.5em 1em;
     position: fixed;
@@ -19,7 +19,7 @@ div.consoleBottom {
     padding-left: 1em;
     height: 1.2em;
     font-size: 0.9em;
-    font-family: 'Ubuntu Mono', monospace;
+    font-family: 'Ubuntu Mono', 'consolas', monospace;
     border-style: none;
     background-color: rgb(62, 70, 81);
     color: #F0F0F0;
